GNOME Bugzilla – Bug 749972
network: Prevent a use after free crash when removing virtual devices
Last modified: 2015-05-27 15:39:50 UTC
When a virtual device is removed and the instance gets finalized we're not disconnecting from the real NMDevice's notify signal and thus end up crashing when the signal fires afterwards. Avoid that by using g_signal_connect_object() so that when we're finalized the disconnection happens automatically.
Created attachment 304080 [details] [review] network: Prevent a use after free crash when removing virtual devices
Reported downstream https://bugzilla.redhat.com/show_bug.cgi?id=1221078
Review of attachment 304080 [details] [review]: Looks good.
Pushed to gnome-3-14 and gnome-3-16 as well Attachment 304080 [details] pushed as c42f7d2 - network: Prevent a use after free crash when removing virtual devices