network: Prevent a use after free crash when removing virtual devices

When a virtual device is removed and the instance gets finalized we're
not disconnecting from the real NMDevice's notify signal and thus end
up crashing when the signal fires afterwards.

Avoid that by using g_signal_connect_object() so that when we're
finalized the disconnection happens automatically.

https://bugzilla.gnome.org/show_bug.cgi?id=749972